--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "ZANTA-MD",
   "description": "Javascript WhatsApp bot made by Danuka Dissanayake",
-  "logo": "https://github.com/DANUWA-MD/DANUWA-MD/blob/main/images/DANUWA-MD.png?raw=true",
+  "logo": "https://github.com/Akashkavindu/ZANTA_MD/blob/main/images/ChatGPT%20Image%20Nov%2021,%202025,%2001_21_32%20AM.png?raw=true",
   "keywords": ["ZANTA-MD"],
   "success_url": "/",
 
