--- a/package.json
+++ b/package.json
@@ -1,51 +1,24 @@
 {
-  "name": "ZANTA-MD",
+  "name": "SILA-TECH",
   "version": "1.0.0",
-  "description": "A Powerful Whatsapp Bot",
   "main": "index.js",
-
   "scripts": {
-    "start": "node index.js",
-    "pm2-start": "pm2 start index.js --deep-monitoring --attach --name ZANTA-MD",
-    "pm2-stop": "pm2 stop ZANTA-MD",
-    "pm2-restart": "pm2 restart ZANTA-MD"
+    "start": "node index.js"
   },
-
   "engines": {
     "node": "22.x",
     "npm": "10.x"
   },
-
   "dependencies": {
-    "@whiskeysockets/baileys": "^7.0.0-rc.9",
-    "api-dylux": "^1.8.5",
-    "axios": "^1.13.2",
-    "browser-id3-writer": "^6.3.1",
-    "cheerio": "^1.1.2",
-    "express": "5.1.0",
-    "ffmpeg": "^0.0.4",
-    "ffmpeg-static": "^5.3.0",
-    "file_size_url": "^1.0.6",
-    "fluent-ffmpeg": "^2.1.2",
-    "@xaviabot/fb-downloader": "^1.0.14",
-    "@vreden/youtube_scraper": "^1.2.8",
-    "@distube/ytdl-core": "^4.16.12",
-    "yt-search": "^2.13.1",
-    "ytdl-core": "^4.11.5",
-    "fs-extra": "^11.3.2",
-    "megajs": "^1.3.9",
+    "@whiskeysockets/baileys": "^6.7.8",
+    "pino": "^8.0.0",
+    "axios": "^1.6.0",
     "node-fetch": "^3.3.2",
-    "node-id3": "^0.2.9",
-    "node-webpmux": "^3.2.1",
-    "path": "^0.12.7",
-    "pino": "^10.1.0",
-    "pm2": "^6.0.13",
-    "punycode": "^2.3.1",
+    "form-data": "^4.0.0",
     "qrcode-terminal": "^0.12.0",
-    "tmp": "^0.2.5",
-    "util": "^0.12.5",
-    "vm": "^0.1.0",
-
-    "tiktok-downloader": "github:synctv-org/tiktok-downloader"
+    "express": "^4.18.2",
+    "file-type": "^18.5.0",
+    "fluent-ffmpeg": "^2.1.2",
+    "chalk": "^5.3.0"
   }
 }
